src/main/java/org/apache/antlr4/JavaRefactorParser.java
// Generated from JavaRefactor.g4 by ANTLR 4.13.2

package org.apache.antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JavaRefactorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, DIGIT=2, NEW_LINE=3, DOT=4, COMMA=5, SEMICOLON=6, AT_SYMBOL=7, ADD=8, 
		SUB=9, MUL=10, DIV=11, EQUAL=12, SINGLE_QUOTA=13, DOUBLE_QUOTA=14, SLASH=15, 
		BACK_SLASH=16, STAR=17, ASSIGN=18, L_PARENTHESIS=19, R_PARENTHESIS=20, 
		L_SQUARE_BRACKET=21, R_SQUARE_BRACKET=22, L_BRACE=23, R_BRACE=24, L_ANGLE_BRACKET=25, 
		R_ANGLE_BRACKET=26, PUBLIC=27, PRIVATE=28, PROTECTED=29, DEFAULT=30, VOID=31, 
		NULL=32, EXTENDS=33, IMPLEMENTS=34, ABSTRACT=35, STATIC=36, FINAL=37, 
		CLASS=38, ENUM=39, INTERFACE=40, RETURN=41, PACKAGE=42, IMPORT=43, THROWS=44, 
		ID=45, QUALIFIER_NAME=46, STRING_LITERAL=47, ARRAY_TYPE=48;
	public static final int
		RULE_classFileDefinition = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2, 
		RULE_classDeclaration = 3, RULE_genericType = 4, RULE_deriveDeclaration = 5, 
		RULE_classBody = 6, RULE_globalVariableDeclaration = 7, RULE_methodDeclaration = 8, 
		RULE_annotationDeclaration = 9, RULE_methodArguments = 10, RULE_exceptionDeclaration = 11, 
		RULE_methodBody = 12, RULE_codeSnippets = 13, RULE_localVariableDeclaration = 14, 
		RULE_otherStatements = 15, RULE_variableDeclaration = 16, RULE_javaType = 17, 
		RULE_stringValue = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"classFileDefinition", "packageDeclaration", "importDeclaration", "classDeclaration", 
			"genericType", "deriveDeclaration", "classBody", "globalVariableDeclaration", 
			"methodDeclaration", "annotationDeclaration", "methodArguments", "exceptionDeclaration", 
			"methodBody", "codeSnippets", "localVariableDeclaration", "otherStatements", 
			"variableDeclaration", "javaType", "stringValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'.'", "','", "';'", "'@'", "'+'", "'-'", "'*'", 
			"'/'", "'='", "'''", "'\"'", null, "'\\'", null, null, "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "'<'", "'>'", "'public'", "'private'", "'protected'", 
			"'default'", "'void'", "'null'", "'extends'", "'implements'", "'abstract'", 
			"'static'", "'final'", "'class'", "'enum'", "'interface'", "'return'", 
			"'package'", "'import'", "'throws'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "DIGIT", "NEW_LINE", "DOT", "COMMA", "SEMICOLON", "AT_SYMBOL", 
			"ADD", "SUB", "MUL", "DIV", "EQUAL", "SINGLE_QUOTA", "DOUBLE_QUOTA", 
			"SLASH", "BACK_SLASH", "STAR", "ASSIGN", "L_PARENTHESIS", "R_PARENTHESIS", 
			"L_SQUARE_BRACKET", "R_SQUARE_BRACKET", "L_BRACE", "R_BRACE", "L_ANGLE_BRACKET", 
			"R_ANGLE_BRACKET", "PUBLIC", "PRIVATE", "PROTECTED", "DEFAULT", "VOID", 
			"NULL", "EXTENDS", "IMPLEMENTS", "ABSTRACT", "STATIC", "FINAL", "CLASS", 
			"ENUM", "INTERFACE", "RETURN", "PACKAGE", "IMPORT", "THROWS", "ID", "QUALIFIER_NAME", 
			"STRING_LITERAL", "ARRAY_TYPE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaRefactor.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaRefactorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassFileDefinitionContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JavaRefactorParser.EOF, 0); }
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public ClassFileDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classFileDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).enterClassFileDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).exitClassFileDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaRefactorVisitor ) return ((JavaRefactorVisitor<? extends T>)visitor).visitClassFileDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassFileDefinitionContext classFileDefinition() throws RecognitionException {
		ClassFileDefinitionContext _localctx = new ClassFileDefinitionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classFileDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(38);
				packageDeclaration();
				}
			}

			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(41);
				importDeclaration();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			classDeclaration();
			}
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(JavaRefactorParser.PACKAGE, 0); }
		public TerminalNode QUALIFIER_NAME() { return getToken(JavaRefactorParser.QUALIFIER_NAME, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaRefactorParser.SEMICOLON, 0); }
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).exitPackageDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaRefactorVisitor ) return ((JavaRefactorVisitor<? extends T>)visitor).visitPackageDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(PACKAGE);
			setState(52);
			match(QUALIFIER_NAME);
			setState(53);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(JavaRefactorParser.IMPORT, 0); }
		public TerminalNode QUALIFIER_NAME() { return getToken(JavaRefactorParser.QUALIFIER_NAME, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaRefactorParser.SEMICOLON, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaRefactorVisitor ) return ((JavaRefactorVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(IMPORT);
			setState(56);
			match(QUALIFIER_NAME);
			setState(57);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(JavaRefactorParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(JavaRefactorParser.ID, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public GenericTypeContext genericType() {
			return getRuleContext(GenericTypeContext.class,0);
		}
		public DeriveDeclarationContext deriveDeclaration() {
			return getRuleContext(DeriveDeclarationContext.class,0);
		}
		public TerminalNode PUBLIC() { return getToken(JavaRefactorParser.PUBLIC, 0); }
		public TerminalNode PRIVATE() { return getToken(JavaRefactorParser.PRIVATE, 0); }
		public TerminalNode PROTECTED() { return getToken(JavaRefactorParser.PROTECTED, 0); }
		public TerminalNode FINAL() { return getToken(JavaRefactorParser.FINAL, 0); }
		public TerminalNode ABSTRACT() { return getToken(JavaRefactorParser.ABSTRACT, 0); }
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaRefactorVisitor ) return ((JavaRefactorVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 939524096L) != 0)) {
				{
				setState(59);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 939524096L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ABSTRACT || _la==FINAL) {
				{
				setState(62);
				_la = _input.LA(1);
				if ( !(_la==ABSTRACT || _la==FINAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(65);
			match(CLASS);
			setState(66);
			match(ID);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VOID || _la==ARRAY_TYPE) {
				{
				setState(67);
				genericType();
				}
			}

			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS || _la==IMPLEMENTS) {
				{
				setState(70);
				deriveDeclaration();
				}
			}

			setState(73);
			classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GenericTypeContext extends ParserRuleContext {
		public List<JavaTypeContext> javaType() {
			return getRuleContexts(JavaTypeContext.class);
		}
		public JavaTypeContext javaType(int i) {
			return getRuleContext(JavaTypeContext.class,i);
		}
		public TerminalNode L_ANGLE_BRACKET() { return getToken(JavaRefactorParser.L_ANGLE_BRACKET, 0); }
		public TerminalNode R_ANGLE_BRACKET() { return getToken(JavaRefactorParser.R_ANGLE_BRACKET, 0); }
		public GenericTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).enterGenericType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).exitGenericType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaRefactorVisitor ) return ((JavaRefactorVisitor<? extends T>)visitor).visitGenericType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GenericTypeContext genericType() throws RecognitionException {
		GenericTypeContext _localctx = new GenericTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_genericType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			javaType();
			setState(76);
			match(L_ANGLE_BRACKET);
			setState(77);
			javaType();
			setState(78);
			match(R_ANGLE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeriveDeclarationContext extends ParserRuleContext {
		public TerminalNode EXTENDS() { return getToken(JavaRefactorParser.EXTENDS, 0); }
		public List<JavaTypeContext> javaType() {
			return getRuleContexts(JavaTypeContext.class);
		}
		public JavaTypeContext javaType(int i) {
			return getRuleContext(JavaTypeContext.class,i);
		}
		public TerminalNode IMPLEMENTS() { return getToken(JavaRefactorParser.IMPLEMENTS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(JavaRefactorParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavaRefactorParser.COMMA, i);
		}
		public DeriveDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deriveDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).enterDeriveDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).exitDeriveDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaRefactorVisitor ) return ((JavaRefactorVisitor<? extends T>)visitor).visitDeriveDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeriveDeclarationContext deriveDeclaration() throws RecognitionException {
		DeriveDeclarationContext _localctx = new DeriveDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_deriveDeclaration);
		int _la;
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXTENDS:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				match(EXTENDS);
				setState(81);
				javaType();
				}
				break;
			case IMPLEMENTS:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(IMPLEMENTS);
				setState(83);
				javaType();
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(84);
					match(COMMA);
					setState(85);
					javaType();
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassBodyContext extends ParserRuleContext {
		public TerminalNode L_BRACE() { return getToken(JavaRefactorParser.L_BRACE, 0); }
		public TerminalNode R_BRACE() { return getToken(JavaRefactorParser.R_BRACE, 0); }
		public List<GlobalVariableDeclarationContext> globalVariableDeclaration() {
			return getRuleContexts(GlobalVariableDeclarationContext.class);
		}
		public GlobalVariableDeclarationContext globalVariableDeclaration(int i) {
			return getRuleContext(GlobalVariableDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaRefactorVisitor ) return ((JavaRefactorVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(L_BRACE);
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(94);
					globalVariableDeclaration();
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 281684222148736L) != 0)) {
				{
				{
				setState(100);
				methodDeclaration();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(R_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVariableDeclarationContext extends ParserRuleContext {
		public TerminalNode STATIC() { return getToken(JavaRefactorParser.STATIC, 0); }
		public TerminalNode FINAL() { return getToken(JavaRefactorParser.FINAL, 0); }
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode PUBLIC() { return getToken(JavaRefactorParser.PUBLIC, 0); }
		public TerminalNode PRIVATE() { return getToken(JavaRefactorParser.PRIVATE, 0); }
		public TerminalNode PROTECTED() { return getToken(JavaRefactorParser.PROTECTED, 0); }
		public GlobalVariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalVariableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).enterGlobalVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).exitGlobalVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaRefactorVisitor ) return ((JavaRefactorVisitor<? extends T>)visitor).visitGlobalVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalVariableDeclarationContext globalVariableDeclaration() throws RecognitionException {
		GlobalVariableDeclarationContext _localctx = new GlobalVariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_globalVariableDeclaration);
		int _la;
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 939524096L) != 0)) {
					{
					setState(108);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 939524096L) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(111);
				match(STATIC);
				setState(112);
				match(FINAL);
				setState(113);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 939524096L) != 0)) {
					{
					setState(114);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 939524096L) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==STATIC || _la==FINAL) {
					{
					setState(117);
					_la = _input.LA(1);
					if ( !(_la==STATIC || _la==FINAL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(120);
				variableDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodDeclarationContext extends ParserRuleContext {
		public TerminalNode STATIC() { return getToken(JavaRefactorParser.STATIC, 0); }
		public TerminalNode FINAL() { return getToken(JavaRefactorParser.FINAL, 0); }
		public JavaTypeContext javaType() {
			return getRuleContext(JavaTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(JavaRefactorParser.ID, 0); }
		public MethodArgumentsContext methodArguments() {
			return getRuleContext(MethodArgumentsContext.class,0);
		}
		public MethodBodyContext methodBody() {
			return getRuleContext(MethodBodyContext.class,0);
		}
		public AnnotationDeclarationContext annotationDeclaration() {
			return getRuleContext(AnnotationDeclarationContext.class,0);
		}
		public ExceptionDeclarationContext exceptionDeclaration() {
			return getRuleContext(ExceptionDeclarationContext.class,0);
		}
		public TerminalNode PUBLIC() { return getToken(JavaRefactorParser.PUBLIC, 0); }
		public TerminalNode PRIVATE() { return getToken(JavaRefactorParser.PRIVATE, 0); }
		public TerminalNode PROTECTED() { return getToken(JavaRefactorParser.PROTECTED, 0); }
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).enterMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaRefactorListener ) ((JavaRefactorListener)listener).exitMethodDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaRefactorVisitor ) return ((JavaRefactorVisitor<? extends T>)visitor).visitMethodDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
